# mcp-household

./: README.md  extract_text_from_pdf.py  mcp_server.py  pyproject.toml  run_llm.py
